--- a/Hotel_Booking_Analysis_Capstone_Project.ipynb
+++ b/Hotel_Booking_Analysis_Capstone_Project.ipynb
@@ -2822,7 +2822,7 @@
         "# What do we see here ?\n",
         "\n",
         "\n",
-        "*  THe most prefered room is A (Room Type)\n",
+        "*  The most prefered room is A (Room Type)\n",
         "\n"
       ],
       "metadata": {
